# python-project-50

./: .gitignore  Makefile  README.md  gendiff-6.cast  gendiff-7.cast  gendiff-8.cast  gendiff.cast  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: gendiff.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py  main.py  parser.py
gendiff/tests/: test_parser.py
gendiff/utils/: utils.py
tests/: test_parser.py
tests/test_data/: file1.json  file1.yaml  file2.json  nested1.json  nested2.json  nested2.yml
tests/test_data/json/: result.txt  result_nested.txt
tests/test_data/nested/: file1.yml
