[project]
name = "hexlet-code"
version = "0.1.0"
description = "Gen diff"
author = "Me"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.9.3",
]

[project.scripts]
gendiff = "gendiff.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
